--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-	<thead>
-		<title><h1>Hello World</h1></title>
-	</thead>
-	<tbody>
-		<h1>Hello World!</h1>
-	</tbody>
+	<head>
+		<title>Hello World</title>
+	</head>
+	<body>
+		<center><h1>Hello World!</h1></center>
+	</body>
 </html>
