--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div class="container">
 							<div class="4u 12u(mobile)" align="center" style="margin: auto;">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="https://lawuvv.github.io/" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 									<h3><a href="#">L.A.W.</a></h3>
 									<p>Laboratório de Aplicações Web.</p>
 								</article>
