--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<div class="4u 12u(mobile)" align="center" style="margin: auto;">
 								<article class="box style2">
 									<a href="https://lawuvv.github.io/" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-									<h3><a href="#">L.A.W.</a></h3>
+									<h3><a href="https://lawuvv.github.io/">L.A.W.</a></h3>
 									<p>Laboratório de Aplicações Web.</p>
 								</article>
 							</div>
