--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<h1><strong>João Magnago</strong></h1>
 							</header>
 							<p>Estudante de Ciência da Computação na Universidade Vila Velha (UVV) no ES.</p>
-							<a href="#work" class="button big scrolly">Confira meus projetos</a>
+							<a href="#portfolio" class="button big scrolly">Confira meus projetos</a>
 						</div>
 					</div>
 				</article>
