--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1><strong>João Magnago</strong></h1>
+								<h1><strong>João Alvim Cosate Magnago</strong></h1>
+								<h3>21 Anos - ES</h3>
 							</header>
-							<p>Estudante de Ciência da Computação na Universidade Vila Velha (UVV) no ES.</p>
+							<p>Graduando em Ciência da Computação pela Universidade Vila Velha (UVV) no ES (De 2016 até 2019)</p>
 							<a href="#portfolio" class="button big scrolly">Confira meus projetos</a>
 						</div>
 					</div>
@@ -48,14 +49,21 @@
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
-						<h2>Projetos dos quais participo</h2>
+						<h2>Projetos dos quais participo/participei</h2>
 					</header>
 					<div class="container">
 							<div class="4u 12u(mobile)" align="center" style="margin: auto;">
 								<article class="box style2">
-									<a href="https://lawuvv.github.io/" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-									<h3><a href="https://lawuvv.github.io/">L.A.W.</a></h3>
-									<p>Laboratório de Aplicações Web.</p>
+									<a href="https://lawuvv.github.io/" class="image featured"><img src="images/pic08.png" alt="" /></a>
+									<h3><a href="https://lawuvv.github.io/">L.A.W. VR</a></h3>
+									<p>Laboratório de Aplicações Web e Realidade Virtual</p>
+									<p>Julho de 2017 a Julho de 2018</p>
+								</article>
+								<article class="box style2">
+									<a href="https://cidades.tce.es.gov.br/" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+									<h3><a href="https://cidades.tce.es.gov.br/">CidadES (TCE-ES)</a></h3>
+									<p>Projeto de controle social e transparência de prestações de conta do Estado do Espírito Santo</p>
+									<p>Março de 2019 a Julho de 2019</p>
 								</article>
 							</div>
 					</div>
@@ -112,8 +120,9 @@
 								<hr />
 								<h3>Redes Sociais</h3>
 								<ul class="social">
-									<li><a href="http://www.facebook.com/joao.magnago.1" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="http://linkedin.com/in/joaomagnago" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="http://github.com/JoaoMagnago" class="icon fa-github"><span class="label">Github</span></a></li>
+									<li><a href="http://www.facebook.com/joao.magnago.1" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<!--
 									<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
 								</ul>
